<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scrum Support</string>
    <string name="emailText">email</string>
    <string name="passwordText">password</string>
    <string name="loginText">Login</string>
    <string name="registerText">Register</string>
    <string name="serverAddress">Server Address</string>
    <string name="confirmPassLbl">Confirm Password</string>
    <string name="passwordsDontMatch">Passwords do not match</string>
    
    <string name="title_error">An Error has ocurred</string>    
    <string name="title_auth">Authentication</string>      
    <string name="title_auth_progress">Authentication&#8230;</string>    
    <string name="title_reg">Registration</string>

    <string name="msg_auth">Attempting to Authenticate</string>
    
    <string name="server_update">Update Server</string>
    
    
    <!-- Add Account -->
    <string name="addPtAccount">Pivotal Tracker Account</string>
    <string name="accountHint"></string>
    <string name="passwordHint">password</string>
    <string name="usernameHint">username</string>
    <string name="newAccountLbl">Add New Account</string>
    <string name="add">Add</string>
    
    
    <!-- Errors -->
    <string name="error_connection">Unable to connect to the Scrum Support Server.</string>
    <string name="error_json_parse">Unable to parse the JSON service message.</string>
	<string name="error_registration">Registration failed. Ensure you are using a valid email.</string>  
	<string name="error_authentication">Authentication Failed. Invalid email or password.</string>  
	<string name="error_add_account">Unable to add account. Check you have entered valid credentials.</string>
	
	<!-- ProjectActivity -->
	<string name="add_account">Add Account</string>
	<string name="accountTitle">Accounts</string>
	<string name="no_accounts_text">Add a new Account from the menu</string>
	<string name="projectTitle">Projects</string>
		
	<!-- TeamActivity -->
	<string name="noTask">No Current Task</string>
	<string name="meNoTask">No current task selected.</string>
	<string name="selectTaskButton">Select a New Task</string>
	<string name="currentTaskLbl">Current Task: </string>
	
	<!--  TaskSelectorActivity -->
	<string name="selectTask">Select Task</string>
	
	<!-- Colors -->
	<color name="Black">#000000</color>
	<color name="White">#FFFFFF</color>
	<color name="ExpandTaskBackground">#FFAFABAB</color>
	<color name="ExpandPersonBackground">#FF7C7C7C</color>
	
	<color name="blueElephantMidnightBlue">#153450</color>
	<color name="blueMightBluePickledBluewood">#294052</color>
	<color name="blueWedgewood">#447294</color>
	<color name="blueMorningGlory">#8FBCDB</color>
	<color name="organeRedPeachWheat">#F4D6BC</color>
	<color name="givryOrange">#F8E4CC</color>
</resources>


