<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blueMightBluePickledBluewood"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/givryOrange"
        android:textSize="40dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/emailText" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/emailField"
        android:layout_below="@id/emailField"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/passwordText"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/passwordField"
        android:layout_below="@+id/passwordField"
        android:layout_marginTop="32dp"
        android:minWidth="100dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/loginText" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginButton"
        android:layout_alignBottom="@+id/loginButton"
        android:layout_alignLeft="@+id/passwordField"
        android:minWidth="100dp"
        android:text="@string/registerText" />

    <TextView
        android:id="@+id/serverAddressLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/serverAddress"
        android:textColor="@color/organeRedPeachWheat"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/serverField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerButton"
        android:layout_below="@+id/serverAddressLbl"
        android:ems="10" />

    <Button
        android:id="@+id/serverOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/serverAddressLbl"
        android:layout_alignRight="@id/serverAddressLbl"
        android:layout_below="@id/serverField"
        android:text="@string/server_update" />

</RelativeLayout>