<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <requestFocus
        android:layout_alignBottom="@+id/usernameField"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/usernameText"
        android:ems="10" >
    </EditText>
    
    <requestFocus
        android:layout_alignBottom="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameField"
        android:layout_below="@+id/usernameField"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/passwordText"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/passwordField"
        android:layout_marginRight="31dp"
        android:layout_marginTop="30dp"
        android:text="@string/loginText" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginButton"
        android:layout_alignBottom="@+id/loginButton"
        android:layout_alignLeft="@+id/title"
        android:layout_marginLeft="14dp"
        android:text="@string/registerText" />

</RelativeLayout>